Fix wrong tab order in wxAuiNotebook after dragging.

Update the tab index correctly to keep tabs list and windows list in sync.

Closes #10848.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73263 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775